--- a/Core.Web/appsettings.Development.json
+++ b/Core.Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DocumentManagementConnection": "server=173.248.151.67,1533;database=db_snoop;uid=usr_devlife;password=dev123;"
-   
+    "DocumentManagementConnection": "server=HPN-138310035\\SQLEXPRESS;database=AsistBD;uid=usr_galvarino;password=usr_galvarino;"
+
   },
   "schema": "dbo",
   "Logging": {
