--- a/Core.Web/Properties/launchSettings.json
+++ b/Core.Web/Properties/launchSettings.json
@@ -15,7 +15,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:44352/paginas/index",
+      "launchUrl": "https://localhost:44352/login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
