--- a/Core.Web/appsettings.Development.json
+++ b/Core.Web/appsettings.Development.json
@@ -10,6 +10,7 @@
       "System": "Debug",
       "Microsoft": "Debug"
     }
-  
-  }
+
+  },
+  "CodigoSistema": "374ccbea-1592-4bd5-8d02-b6a52a927282"
 }
