validacion de login boostrap.validator

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/Core/v15/Server/sqlite3/db.lock
+/.vs/Core/v15/Server/sqlite3/storage.ide
+/.vs/Core/v15/Server/sqlite3/storage.ide-shm
+/.vs/Core/v15/Server/sqlite3/storage.ide-wal
