--- a/Core.Web/appsettings.Development.json
+++ b/Core.Web/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DocumentManagementConnection": "server=HPN-138310035\\SQLEXPRESS;database=AsistBD;uid=usr_galvarino;password=usr_galvarino;"
+    //"DocumentManagementConnection": "server=173.248.151.67,1533;database=asistgruas;uid=asistuser;password=12345;"
 
   },
   "schema": "dbo",
